src/components/header/header.css
.wrapper{
    margin: 5px -8px 8px 0;
    padding: 8px;
}
.logoWrapper {
    width: 50%;
}
.logo{
    width: 50%;
    min-width: 128px;
    max-width: 200px;
    padding: 8px;
}
.button, .iconButton{
    padding: 8px;
    margin: 6px 8px;
    height: auto;
    float: right;
}
.material-icons{
    font-size: 24px !important;
}

.menu {
    right: -8px !important;
}

